testsuite/tests/interpreter/null_node_access/test.out
main.adb
script.lkql:2:9: error: Invalid direct access on node of kind No_Kind
2 | print(n.pouet)
  |         ^^^^^ 

